test/files/neg/t12953-expansion-b.check
Client_2.scala:8: warning: possible missing interpolator: detected interpolated identifier `$unusedVariable`
    id {
       ^
Client_2.scala:8: warning: local val unusedVariable in value <local Test> is never used
    id {
       ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
